--- a/energy.css
+++ b/energy.css
@@ -49,7 +49,7 @@
     justify-content: center;
     align-items: center;
     justify-content: space-evenly;
-    background-image: url("./photo/battery3.jpg");
+    background-image: url("battery3.jpg");
     background-size: cover;
 }
 
@@ -98,7 +98,7 @@
 }
 
 .service-para-content1-photo {
-    background-image: url("./photo/baas.jpg");
+    background-image: url("baas.jpg");
     background-size: cover;
     height: 280px;
     width: 90%;
