--- a/energy.css
+++ b/energy.css
@@ -43,101 +43,317 @@
 }
 
 .big-box1 {
-    height: 300px;
+    height: 400px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
-    background-image: url("battery3.jpg");
+    justify-content: space-between;
+    background-image: url("battery1.jpg");
     background-size: cover;
 }
 
-.big-box1-content {
-    height: 70%;
-    width: 70%;
-    opacity: 3
+.big-box1-content1 {
+    height: 20%;
+    width: 45%;
+    opacity: 3;
+    background-color: blue;
 }
 
-.big-box1-content-para1 {
+.big-box1-content1-para1 {
     font-size: 4rem;
-    color: rgb(255, 0, 0);
+    color: rgb(0, 213, 255);
     margin-left: 10%;
     font-weight: 700;
 }
 
 
+.empoering-bignev {
+    margin-top: 10px;
+}
 
 
-
-
-
-.service-para {
+.empoering-content {
+    height: 320px;
+    width: 100%;
     display: flex;
     justify-content: center;
-    height: 800px;
-    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.empoering-content-pic {
+    height: 200px;
+    width: 40%;
     margin-top: 30px;
-}
-
-.service-para-content1 {
-    height: 700px;
-    width: 45%;
-    margin-left: 5%;
-    border-right: 1.5px solid red;
-}
-
-.service-para-content2 {
-    height: 700px;
-    width: 45%;
-}
-
-.service-para-content1-text1 {
-    margin-top: 10px;
-    font-size: 2.5rem;
-}
-
-.service-para-content1-photo {
-    background-image: url("baas.jpg");
     background-size: cover;
-    height: 280px;
-    width: 90%;
-    margin: 3% 0px 3% 5%;
-}
-
-
-.service-para-content1-text2 {
-    font-size: 1.1rem;
-    margin: 1% 0% 0% 0%;
-    color: rgb(94, 94, 94);
-}
-
-.service-para-content2-text1 {
+    border-radius: 8px;
     font-size: 2.5rem;
-    margin-top: 10px;
+}
+
+.empoering-content-para {
+    height: 300px;
+    width: 45%;
+    color: rgb(0, 0, 0);
+    font-size: 1.1rem;
+    font-weight: 530;
+}
+
+.product-boxes {
+    height:350px;
+    width: 100%;
+    border-top: 1px solid rgb(80, 80, 80);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.product-box-main-heading {
+    height: 50px;
+    width: 25%;
+    font-size: 1.85rem;
+    font-weight: 600;
+}
+
+.product-box {
+    height: 300px;
+    width: 22%;
+    border: 1.5px solid black;
+    background-color: rgb(212, 212, 212);
+}
+
+.product-box-heading {
+    color: orange;
+    font-size: 1.3rem;
+
+    padding: 10px;
+}
+
+.product-box-text {
+    color: rgb(43, 43, 43);
+    font-size: 1.01rem;
+    padding: 10px;
+}
+
+.service-boxes {
+    height: 450px;
+    width: 100%;
+    border-top: 1px solid rgb(80, 80, 80);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.service-box-main-heading {
+    height: 50px;
+    width: 25%;
+    font-size: 1.85rem;
+    font-weight: 600;
+}
+
+.service-box {
+    height: 400px;
+    width: 70%;
+    border: 1.5px solid black;
+    background-color: rgb(212, 212, 212);
+}
+
+.service-box-heading {
+    color: orange;
+    font-size: 1.3rem;
+    padding: 5px;
+    padding-top: 10px;
+}
+
+.service-box-text {
+    color: rgb(43, 43, 43);
+    font-size: 1.01rem;
+    padding: 3px;
+}
+
+.quality {
+    height: 150px;
+    width: 98%;
+    margin-left: 15px;
+    border-top: 1px solid rgb(80, 80, 80);
+}
+
+.quality-heading {
+    font-size: 1.8rem;
+    font-weight: 530;
+    padding: 5px 0px 15px 0px;
+}
+
+.quality-text {
+    font-size: 1rem;
+    color: rgb(43, 43, 43);
+}
+
+
+
+.footer {
+    height: 300px;
+    width: 100%;
+    color: rgb(194, 194, 194);
+    background-color: rgb(0, 0, 31);
+}
+
+.footer-box {
+    height: 250px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    border-bottom: 1px solid black;
+}
+
+.footer-box1 {
+    height: 240px;
+    width: 50%;
+    
+}
+
+.footer-box1-upper-text {
+    font-size: 1rem;
+    margin-left: 5%;
+}
+
+.footer-box1-inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 0.9rem;
+    margin-top: 2%;
+}
+
+.footer-box1-form {
+    height: 200px;
+    width: 45%;
+}
+
+.footer-box1-form-input {
+    margin: 0% 0px 0px 8%;
+}
+
+.footer-input {
+    margin-top:5%;
+    width: 90%;
+}
+
+.footer-box1-submit {
+    height: 25px;
+    width: 120px;
+    margin: 8% 0% 0% 30%;
+    border-radius: 4px;
+}
+
+.footer-box1-submit:hover {
+    background-color: rgb(172, 172, 172);
+}
+
+.footer-box2-text {
+    height: 200px;
+    width: 45%;
+}
+
+
+.footer-box2-text1 {
+    font-size: 1.2rem;
+    margin-left: 8%;
 }
 
 ul {
-    margin: 3% 0% 0% 3%;
-    font-size: 1.1rem;
-    color: rgb(94, 94, 94);
+    list-style: none;
 }
 
 ul li {
     margin-top: 2%;
-    margin-left: 4%;
 }
 
-.footer {
+.footer-box2 {
+    height: 240px;
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    border-left: 1px solid red;
+}
+
+.contactus {
+    height: 220px;
+    width: 45%;
+}
+
+.contactus-text {
+    font-size: 1.5rem;
+    color: gray;
+    margin-left: 20%;
+}
+
+.contactus-whatsup {
+    font-size: 0.9rem;
+    margin-top: 10px;
+}
+
+.contactus-phone {
+    display: flex;
+}
+
+.contactus-phone-heading {
+    font-size: 20px;
+    font-weight: 900;
+    margin: 8% 0% 0% 5%;
+}
+
+.contactus-phone-text {
+    margin: 10% 0% 0% 3%;
+}
+
+.contactus-email {
+    display: flex;
+}
+
+.contactus-email-heading {
+    font-size: 20px;
+    font-weight: 900;
+    margin: 5% 0% 0% 5%;
+}
+
+.contactus-email-text {
+    margin: 6% 0% 0% 3%;
+}
+
+.address {
+    height: 220px;
+    width: 45%;
+}
+
+.address-text {
+    font-size: 1.5rem;
+    color: gray;
+    margin-left: 25%;
+}
+
+.address-box {
     height: 100px;
+    width: 80%;
+    margin: 5% 0% 0% 15%;
+}
+
+.footer-last {
+    height: 50px;
     width: 100%;
-    background-color: rgb(0, 0, 31);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.footer-box {
+.footer-lastbox {
     height: 40px;
     width: 40%;
     color: white;
@@ -146,4 +362,3 @@ ul li {
     justify-content: center;
     align-items: center;
 }
-
