--- a/energy.css
+++ b/energy.css
@@ -42,6 +42,11 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.mid1:hover {
+    color: rgb(120, 120, 120);
+    text-decoration: underline;
+}
+
 .big-box1 {
     height: 400px;
     width: 100%;
