--- a/mobility.css
+++ b/mobility.css
@@ -48,98 +48,176 @@
 }
 
 .big-box1 {
-    height: 300px;
+    height: 800px;
+    width: 100%;
+    background-image: url("green mobility.jpg");
+    background-size: cover;
+}
+
+.big-box1-content1 {
+    display: flex;
+    justify-content: center;
+}
+
+.big-box1-content1-para1 {
+    height: 20%;
+    width: 45%;
+    font-size: 4rem;
+    color: rgb(0, 0, 255);
+    margin-top: 2%;
+    font-weight: 700;
+    opacity: 30;
+}
+
+.big-box1-para {
+    display: flex;
+    align-items: center;
+}
+
+.big-box1-para-box {
+    height: 150px;
+    width: 80%;
+    margin-top: 9%;
+    margin-left: 3%;
+    font-size: 1.1rem;
+    font-weight: 530;
+}
+
+.big-box1-para-box1 {
+    height: 60px;
+    width: 70%;
+    background-color: rgb(111, 216, 118);
+    font-size: 2.4rem;
+    font-weight: 700;
+}
+
+.big-box1-para-box2 {
+    height: 90px;
+    width: 90%;
+    background-color: rgb(188, 216, 111);
+}
+
+.big-box2 {
+    height: 1500px;
+    width: 100%;
+}
+
+.mobility-para-box {
+    height: 120px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 7%;
+}
+
+.mobility-heading {
+    height: 40px;
+    width: 35%;
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: rgb(80, 80, 80);
+}
+
+.mobility-text {
+    height: 80px;
+    width: 60%;
+    font-size: 1.07rem;
+    color: rgb(80, 80, 80);
+}
+
+.big-box2-boxes {
+    height: 250px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     justify-content: space-evenly;
-    background-image: url("battery3.jpg");
+    margin-top: 1.4%;
+}
+
+.sustanable-pic {
+    height: 249px;
+    width: 31%;
+}
+
+.big-box2-road-pic1 {
+    background-image: url("sustanable pic1.jpg");
     background-size: cover;
 }
 
-.big-box1-content {
-    height: 70%;
-    width: 70%;
-    opacity: 3
+.big-box2-road-pic2 {
+    background-image: url("sustanable pic2.jpg");
+    background-size: cover;
 }
 
-.big-box1-content-para1 {
-    font-size: 4rem;
-    color: rgb(255, 0, 0);
-    margin-left: 10%;
+.big-box2-road-pic3 {
+    background-image: url("sustanable pic3.jpg");
+    background-size: cover;
+}
+
+.mobility-bigbox {
+    height: 230px;
+    width: 100%;
+    margin-top: 2%;
+}
+
+.mobility-bigbox-box {
+    height: 70px;
+    width: 100%;
+    display: flex;
+    margin-top: 0.8%;
+}
+
+.mobility-bigbox-box-heading {
+    height: 60px;
+    width: 45%;
+    font-size: 1.5rem;
+    font-weight: 549;
+}
+
+.mobility-bigbox-box-text {
+    height: 70px;
+    font-size: 1.1rem;
+    color: rgb(80, 80, 80);
+}
+
+.line {
+    width: 100%;
+    border: 0.1px solid gray;
+    margin-top: 0.1%;
+}
+
+.big-box2-water-pic1 {
+    background-image: url("water mobility pic1.jpg");
+    background-size: cover;
+}
+
+.big-box2-water-pic2 {
+    background-image: url("water mobility pic2.jpeg");
+    background-size: cover;
+}
+
+.big-box2-water-pic3 {
+    background-image: url("water mobility pic3.jpg");
+    background-size: cover;
+}
+
+.last-bigbox {
+    height: 230px;
+    width: 100%;
+    color: white;
+    background-color: rgb(108, 108, 108);
+}
+
+.last-bigbox1{
+    font-size: 2.2rem;
     font-weight: 700;
 }
 
-
-
-
-
-
-
-.service-para {
-    display: flex;
-    justify-content: center;
-    height: 800px;
-    width: 100%;
-    margin-top: 30px;
-}
-
-.service-para-content1 {
-    height: 700px;
-    width: 45%;
-    margin-left: 5%;
-    border-right: 1.5px solid red;
-}
-
-.service-para-content2 {
-    height: 700px;
-    width: 45%;
-}
-
-.service-para-content1-text1 {
-    margin-top: 10px;
-    font-size: 2.5rem;
-}
-
-.service-para-content1-photo {
-    background-image: url("baas.jpg");
-    background-size: cover;
-    height: 280px;
-    width: 90%;
-    margin: 3% 0px 3% 5%;
-}
-
-
-.service-para-content1-text2 {
+.last-bigbox2 {
     font-size: 1.1rem;
-    margin: 1% 0% 0% 0%;
-    color: rgb(94, 94, 94);
+    margin-top: 3%;
 }
-
-.service-para-content2-text1 {
-    font-size: 2.5rem;
-    margin-top: 10px;
-}
-
-ul {
-    margin: 3% 0% 0% 3%;
-    font-size: 1.1rem;
-    color: rgb(94, 94, 94);
-}
-
-ul li {
-    margin-top: 2%;
-    margin-left: 4%;
-}
-
-
-
-
-
-
-
-
 
 
 .footer {
