--- a/readmore.css
+++ b/readmore.css
@@ -312,3 +312,350 @@ ul li {
     justify-content: center;
     align-items: center;
 }
+
+
+
+
+
+
+
+
+@media(min-width:300px) and (max-width:400px) {
+
+    
+    *{
+        margin: 0;
+        border: 0;
+        border: border-box;
+    }
+    .header {
+        background-color: rgb(255, 255, 255);
+    }
+    
+    .background-image {
+        background-image: url("background image.jpg");
+        height: 300px;
+        width: 100%;
+        background-size: cover;
+    }
+    
+    .nev {
+        height: 40px;
+        width: 100%;
+    }
+    .nevbar {
+        display: flex;
+        height: 40px;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+        background-color: rgb(0, 0, 31);
+        position: fixed;
+    }
+    
+    .left-logo{
+        height: 15px;
+        width: 30px;
+        background-size: cover;
+        margin: -10px 0px 10px 10px;
+    }
+    
+    .left-logo-text{
+        color: rgb(206, 206, 206);
+        font-weight: 550;
+        font-size: 0.6rem;
+        font-family: 'Times New Roman', Times, serif;
+    }
+    .mid{
+        margin-right: 6%;
+        
+    }
+    .mid1{
+        text-decoration: none;
+        color: white;
+        margin-right: 20px;
+        font-size: 0.5rem;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+    
+    .mid1:hover {
+        color: rgb(120, 120, 120);
+        text-decoration: underline;
+    }
+
+
+
+
+
+
+
+    .big-box1 {
+        height: 170px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-evenly;
+        background-image: url("battery3.jpg");
+        background-size: cover;
+    }
+    
+    .big-box1-content {
+        height: 70%;
+        width: 95%;
+        opacity: 3
+    }
+    
+    .big-box1-content-para1 {
+        font-size: 2rem;
+        color: rgb(255, 0, 0);
+        margin-left: 10%;
+        font-weight: 700;
+    }
+    
+    
+    
+    
+    .service-para {
+        display: flex;
+        justify-content: center;
+        height: 800px;
+        width: 100%;
+        margin-top: 30px;
+    }
+    
+    .service-para-content1 {
+        height: 700px;
+        width: 45%;
+        margin-left: 5%;
+        border-right: 1.5px solid red;
+    }
+    
+    .service-para-content2 {
+        height: 700px;
+        width: 45%;
+    }
+    
+    .service-para-content1-text1 {
+        margin-top: 10px;
+        font-size: 1.3rem;
+    }
+    
+    .service-para-content1-photo {
+        background-image: url("baas.jpg");
+        background-size: cover;
+        height: 90px;
+        width: 90%;
+        margin: 3% 0px 3% 5%;
+    }
+    
+    
+    .service-para-content1-text2 {
+        font-size: 0.8rem;
+        margin: 1% 0% 0% 0%;
+        color: rgb(94, 94, 94);
+    }
+    
+    .service-para-content2-text1 {
+        font-size: 1.3rem;
+        margin-top: 10px;
+    }
+    
+    ul {
+        margin: 3% 0% 0% 3%;
+        font-size: 0.8rem;
+        color: rgb(94, 94, 94);
+    }
+    
+    ul li {
+        margin-top: 2%;
+        margin-left: 4%;
+    }
+
+
+
+
+
+
+    .footer {
+        height: 250px;
+        width: 100%;
+        color: rgb(194, 194, 194);
+        background-color: rgb(0, 0, 31);
+    }
+    
+    .footer-box {
+        height: 200px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-evenly;
+        border-bottom: 1px solid black;
+    }
+    
+    .footer-box1 {
+        height: 120px;
+        width: 50%;
+        margin-top: -40px;
+        
+    }
+    
+    .footer-box1-upper-text {
+        font-size: 0.8rem;
+        margin-left: 5%;
+    }
+    
+    .footer-box1-inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 0.6rem;
+    }
+    
+    .footer-box1-form {
+        height: 100px;
+        width: 45%;
+    }
+    
+    .footer-box1-form-input {
+        margin: 0% 0px 0px 8%;
+    }
+    
+    .footer-input {
+        height: 4px;
+        width: 95%;
+        margin-top: 2%;
+        border-radius: 3px;
+        font-size: 0.4rem;
+    }
+    
+    .footer-box1-submit {
+        height: 10px;
+        width: 80px;
+        font-size: 0.5rem;
+        margin: 8% 0% 0% 10%;
+        border-radius: 4px;
+    }
+    
+    .footer-box1-submit:hover {
+        background-color: rgb(172, 172, 172);
+    }
+    
+    .footer-box2-text {
+        height: 100px;
+        width: 45%;
+    }
+    
+    
+    .footer-box2-text1 {
+        font-size: 0.9rem;
+        margin-left: 5%;
+    }
+    
+    ul {
+        list-style: none;
+    }
+    
+    ul li {
+        margin-top: 2%;
+        font-size: 0.5rem;
+        margin-left: 30px;
+    }
+    
+    .footer-box2 {
+        height: 120px;
+        width: 45%;
+        margin-top: -40px;
+        display: flex;
+        justify-content: center;
+        justify-content: space-evenly;
+        align-items: center;
+        border-left: 1px solid red;
+    }
+    
+    .contactus {
+        height: 100px;
+        width: 45%;
+    }
+    
+    .contactus-text {
+        font-size: 1rem;
+        color: gray;
+        margin-left: 20%;
+    }
+    
+    .contactus-whatsup {
+        font-size: 0.5rem;
+        margin-top: 10px;
+    }
+    
+    .contactus-phone {
+        display: flex;
+    }
+    
+    .contactus-phone-heading {
+        font-size: 10px;
+        font-weight: 900;
+        margin: 8% 0% 0% 5%;
+    }
+    
+    .contactus-phone-text {
+        margin: 10% 0% 0% 3%;
+        font-size: 7px;
+    }
+    
+    .contactus-email {
+        display: flex;
+    }
+    
+    .contactus-email-heading {
+        font-size: 10px;
+        font-weight: 900;
+        margin: 5% 0% 0% 5%;
+    }
+    
+    .contactus-email-text {
+        margin: 6% 0% 0% 3%;
+        font-size: 7px;
+    }
+    
+    .address {
+        height: 110px;
+        width: 45%;
+    }
+    
+    .address-text {
+        font-size: 1rem;
+        color: gray;
+        margin-left: 25%;
+    }
+    
+    .address-box {
+        height: 50px;
+        width: 80%;
+        margin: 5% 0% 0% 15%;
+        font-size: 0.7rem;
+    }
+    
+    .footer-last {
+        height: 30px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+    
+    .footer-lastbox {
+        height: 20px;
+        width: 70%;
+        color: white;
+        font-size: 0.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
