--- a/readmore.css
+++ b/readmore.css
@@ -562,6 +562,7 @@ ul li {
     ul li {
         margin-top: 2%;
         font-size: 0.5rem;
+        margin-left: -3px;
     }
     
     .footer-box2 {
